# wp2git

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  version.py  wp2git.py
wp2git/: version.py  wp2git.py
